fixing video spacing issue on no-image header pages

--- a/css/styles.css
+++ b/css/styles.css
@@ -3517,6 +3517,10 @@ p.not-found-btn .bfblButtonLink.btnBlue:hover {
 		margin-top: 0;
 		padding-top: 0;
 	}
+	header.page-header.no-image ~ .entry-content .video:first-child ~ * {
+		margin-top: 0;
+		padding-top: 0;
+	}
 
 	/* PAGE CONTENT - TABLET */
 	.entry-content {
@@ -4728,10 +4732,6 @@ p.not-found-btn .bfblButtonLink.btnBlue:hover {
 
 	header.page-header.no-image {
 		padding: 32px 46px; padding: 2rem 2.875rem;
-	}
-
-	header.page-header.no-image ~ .entry-content *:first-child {
-		margin-top: 0;
 	}
 
 
